[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.22"
