[package]
name = "advent2020"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
bitvec = "0.19.4"
cascade = "1.0.0"
gridly = "0.9.0"
gridly_adapters = "0.1.0"
gridly_grids = "0.4.0"
indent_write = "2.0.0"
itertools = "0.9.0"
joinery = "2.0.0"
lazy_format = "1.8.3"
nom = "6.0.1"
nom-supreme = "0.1.0"
ordered-float = "2.0.0"
rayon = "1.5.0"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.22"
